sorting algorithms implemented

--- a/src/components/Column/column.sass
+++ b/src/components/Column/column.sass
@@ -1,3 +1,14 @@
 @import '../../constants/styles/fonts.sass'
 @import '../../constants/styles/colors.sass'
 @import '../../constants/styles/media-data.sass'
+
+.title
+  font-size: 26px
+  padding: 10px
+  &:hover
+    background-color: $main-background-color
+
+.column-list
+  padding: 10px
+  .item
+    padding: 5px
