--- a/src/components/Table/table.sass
+++ b/src/components/Table/table.sass
@@ -1,3 +1,9 @@
 @import '../../constants/styles/fonts.sass'
 @import '../../constants/styles/colors.sass'
 @import '../../constants/styles/media-data.sass'
+
+.table
+  display: flex
+  justify-content: space-between
+  .column
+    text-align: center
