--- a/src/components/Table/table.sass
+++ b/src/components/Table/table.sass
@@ -2,8 +2,11 @@
 @import '../../constants/styles/colors.sass'
 @import '../../constants/styles/media-data.sass'
 
-.table
-  display: flex
-  justify-content: space-between
-  .column
-    text-align: center
+#table
+  .table
+    display: flex
+    justify-content: center
+  .left-border
+    border-left: 1px solid $border-color
+  .right-border
+    border-right: 1px solid $border-color
