added button to transition between two different api in pc version

--- a/src/components/Column/column.sass
+++ b/src/components/Column/column.sass
@@ -57,4 +57,4 @@
           inset-inline-end: 0
           width: 5px
           height: 5px
-          background: white
+          background: $white
