--- a/src/constants/styles/colors.sass
+++ b/src/constants/styles/colors.sass
@@ -1,3 +1,7 @@
 $main-background-color: #cccccc
 $main-text-color: #000000
 $border-color: #969696
+
+$white: #ffffff
+$green: #009432
+$light-green: #b8e994
