--- a/src/components/Table/table.sass
+++ b/src/components/Table/table.sass
@@ -3,6 +3,11 @@
 @import '../../constants/styles/media-data.sass'
 
 #table
+  .button-container
+    margin-top: 15px
+    margin-bottom: 15px
+    display: flex
+    justify-content: center
   .table
     display: flex
     justify-content: center
